# frontporch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  compose.tools.yaml  compose.yaml  manage.py  pyproject.toml
asterisk/etc/: asterisk.conf  extensions.conf  extensions_voipms.conf.example  manager.conf.example  modules.conf  pjsip.conf  pjsip_network.conf.example  pjsip_voipms.conf.example
directory/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
directory/asterisk/: ami.py  apply.py  autoreload.py  builder.py  domain.py  renderer.py
directory/migrations/: 0001_initial.py  0002_rename_parent_name_to_display_name.py  0003_publicphonenumber.py  0004_externalcontactpermission_externalnumberextension_and_more.py  0005_childblackoutperiod.py  0006_parent_user.py  0007_remove_dialshortcut_dial_shortcut_has_exactly_one_target_and_more.py  0008_childlandline.py  0009_remove_dialshortcut_dial_shortcut_has_exactly_one_target_and_more.py  0010_family_contact_extensions.py
directory/tests/: test_admin.py  test_domain.py  test_parent_portal.py  test_seed_test_families.py
docs/: TEST_FAMILIES.md
docs/architecture/: ADR-000-template.md  ADR-001-project-vision.md  ADR-002-asterisk-as-pbx.md  ADR-003-tailscale-networking.md  ADR-004-analog-endpoints.md  ADR-005-relationship-based-permissions.md  ADR-006-zero-touch-gateway-provisioning.md  ADR-007-public-telephone-integration.md  README.md  (+2 more)
frontporch/: asgi.py  settings.py  urls.py  wsgi.py
(+14 files in other folders)
